@@ -3,6 +3,7 @@
 *.so
 .deps
 .libs
+.version
 ABOUT-NLS
 aclocal.m4
 autom4te.cache
