@@ -1,6 +1,6 @@
 .\"             -*-Nroff-*-
 .\"
-.TH W "1" "June 2011" "procps-ng" "User Commands"
+.TH W "1" "May 2012" "procps-ng" "User Commands"
 .SH NAME
 w \- Show who is logged on and what they are doing.
 .SH SYNOPSIS
@@ -48,6 +48,9 @@ field is shown by default.
 .TP
 \fB\-\-help\fR
 Display help text and exit.
+.TP
+\fB\-\-ip\-addr\fR
+Display IP address instead of hostname for \fBfrom\fR field.
 .TP
 \fB\-V\fR, \fB\-\-version\fR
 Display version information.
